argocd-deployment/100-argocd-wf-steps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: download-training-code
  namespace: kubeflow
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/sync-wave: "1"
spec:
  restartPolicy: Never
  volumes:
  - name: pvc
    persistentVolumeClaim:
      claimName: pvc-train
  containers:
  - name: download-training-code
    image: alpine/git:latest
    volumeMounts:
    - name: pvc
      mountPath: "/home/jovyan/git-volume"
    command:
    - /bin/sh
    - -c
    - |
      apk add --no-cache git 
      rm -rf /home/jovyan/git-volume/*
      git clone --branch $MEDDASH_BRANCH_NAME  https://github.com/meddash-cloud/cicd-projects-examples.git /home/jovyan/git-volume/src
      chmod -R 777 /home/jovyan/git-volume/*
---
apiVersion: v1
kind: Pod
metadata:
  name: run-jupyter-trainer
  namespace: kubeflow
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/sync-wave: "2"
spec:
  restartPolicy: Never
  volumes:
  - name: pvc
    persistentVolumeClaim:
      claimName: pvc-train
  containers:
  - name: run-jupyter-trainer
    image: kubeflownotebookswg/jupyter-pytorch-full
    volumeMounts:
    - name: pvc
      mountPath: "/home/jovyan/git-volume"
    command:
    - /bin/sh
    - -c
    - |
      cd /home/jovyan/git-volume/src/$MEDDASH_BRANCH_NAME/ && ipython 020-pipeline-step-04-run.ipynb
