argocd-deployment/111-tf-model-deployment.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-download-training-code
  namespace: kubeflow
spec:
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: pvc-tf-train
  containers:
  - name: download-training-code
    image: alpine/git:latest
    volumeMounts:
      - name: pvc
        mountPath: "/home/jovyan/git-volume"
    command:
    - /bin/sh
    - -c
    - |
      while true; do sleep 10; done
