argocd-deployment/113-tf-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tf-serve-train-model
  namespace: kubeflow
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tf-serve-train-model
  template:
    metadata:
      labels:
        app: tf-serve-train-model
    spec:
      volumes:
      - name: shared-volume
        emptyDir: {}
      containers:
      - name: download-trained-model
        image: alpine
        command: 
        - /bin/sh
        - -c
        - |
          mkdir -p /tmp/minio-client
          wget https://dl.min.io/client/mc/release/linux-amd64/mc \
          -O /tmp/minio-client/mc
          chmod +x /tmp/minio-client/mc
          alias mc=/tmp/minio-client/mc
          mc alias set myminio http://minio-service.kubeflow.svc.cluster.local:9000  $MEDDASH_AWS_ACCESS_KEY_ID  $MEDDASH_AWS_SECRET_ACCESS_KEY
          mc cp --recursive  myminio/datapipeline-024/models/trained/detect-digits /ml-model/
          touch /ml-model/ml-model-downloaded; 
        volumeMounts:
        - name: shared-volume
          mountPath: /ml-model
      - name: tf-serve-trained-model
        volumeMounts:
        - name: shared-volume
          mountPath: /ml-model
        image: tensorflow/serving:2.6.2
        command:
        - /usr/bin/tensorflow_model_server
        args:
        - --model_name=detect-digits
        - --port=9000
        - --rest_api_port=8080
        - --model_base_path=/ml-model/detect-digits
        - --rest_api_timeout_in_ms=60000
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /v1/models/detect-digits
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
