argocd-deployment/204-serve-trained-model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serve-train-model
  namespace: kubeflow
  annotations:
    argocd.argoproj.io/hook: Sync
    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serve-train-model
  template:
    metadata:
      labels:
        app: serve-train-model
    spec:
      volumes:
      - name: shared-volume
        emptyDir: {}
      containers:
      - name: torch-serve-trained-model
        image: seldonio/mlserver:1.3.5
        volumeMounts:
        - name: shared-volume
          mountPath: /ml-model
        command:
        - /bin/sh
        - -c
        - |
          cat <<EOF > /ml-model/$MODEL_NAME/$MODEL_VERSION/model-settings.json
          {
            "name": "${MODEL_NAME}",
            "implementation": "mlserver_sklearn.SKLearnModel",
            "parameters": {
              "uri": "./iris.model.classifier.joblib",
              "version": "${MODEL_VERSION}"
            }
          }
          EOF
          cd /ml-model/$MODEL_NAME/$MODEL_VERSION/ && mlserver start .
          echo mlserver killed
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "500m"
            memory: "128Mi"
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /v2/health/ready
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
