argocd-deployment/120-tf-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tf-model-service
  namespace: kubeflow
  labels:
    app: tf-serve-train-model
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tf-serve-train-model
