argocd-deployment/130-tf-virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-tf-serve
  namespace: kubeflow
  annotations:
    argocd.argoproj.io/sync-wave: "130"

spec:
  hosts:
    - app.${MEDDASH_CLUSTER_ID}.hosted.meddash.cloud
    - tf-model-service
  gateways:
    - tf-serve-api
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
      - destination:
          host: tf-model-service
          port:
            number: 80
